[package]
name = "echarts"
version = "0.1.1"
edition = "2021"
homepage = "https://github.com/ptechen"
documentation = "https://docs.rs/echarts"
repository = "https://github.com/ptechen/echarts.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Rust bindings for echarts."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.60", features = ["Element", "HtmlCanvasElement"] }
